--- a/planning/templates/planning/upload.html
+++ b/planning/templates/planning/upload.html
@@ -191,7 +191,7 @@
 
 
                 <div id="list_presentation_block2" class="d-flex w-100 justify-content-between">
-                    <h6 id="duree" class="d-flex align-self-end">${ presentation.duration } ${presentation.id} min</h6>
+                    <h6 id="duree" class="d-flex align-self-end">${ presentation.duration } min</h6>
                     <button id="btn_fichier" type="button" class="btn btn-outline-secondary" onclick="popup()" value_presta="${presentation.id}">Fichier</button>
                 </div>
 
