feat: limitation de taille de fichier, transfert FTP fonctionnel

--- a/planning/templates/planning/upload.html
+++ b/planning/templates/planning/upload.html
@@ -75,7 +75,7 @@
                 <div class="col">
                 <div class="mb-3 mt-3">
                     <div style="display: flex; justify-content: space-between;">
-                        <h2 class="mb-3" style="font-weight: 300">Importer une présentation (.pptx)</h2>
+                        <h2 class="mb-3" style="font-weight: 300">Importer une présentation (.pptx, <strong>1GO max</strong>)</h2>
                         <span style="font-weight: 900; cursor: pointer;" onclick="popup_close()">&times;</span>
                     </div>
                         <form enctype="multipart/form-data" method="POST" action="" style="text-align: center;">
