--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -171,3 +171,76 @@ background: #eee;
 #emojis{
 	display: inline-flex;
 }
+/* * pop up de synchro fichier */
+#chargement{
+	position: absolute;
+	background-color: #dbdbdb;
+	padding: 1rem;
+	top: 50%;
+	left: 50%;
+	width: 30rem;
+	height: 10rem;
+	z-index: 1;
+	border-radius: 5px;
+	transform: translate(-50%, -50%);
+}
+
+.lds-ellipsis {
+	display: inline-block;
+	position: relative;
+	top : 50%;
+	left: 50%;
+	transform: translate(-50%, -75%);
+	width: 80px;
+	height: 80px;
+  }
+  .lds-ellipsis div {
+	position: absolute;
+	top: 33px;
+	width: 13px;
+	height: 13px;
+	border-radius: 50%;
+	background: #fff;
+	animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .lds-ellipsis div:nth-child(1) {
+	left: 8px;
+	animation: lds-ellipsis1 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(2) {
+	left: 8px;
+	animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(3) {
+	left: 32px;
+	animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(4) {
+	left: 56px;
+	animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+	0% {
+	  transform: scale(0);
+	}
+	100% {
+	  transform: scale(1);
+	}
+  }
+  @keyframes lds-ellipsis3 {
+	0% {
+	  transform: scale(1);
+	}
+	100% {
+	  transform: scale(0);
+	}
+  }
+  @keyframes lds-ellipsis2 {
+	0% {
+	  transform: translate(0, 0);
+	}
+	100% {
+	  transform: translate(24px, 0);
+	}
+  }
+  
