--- a/templates/layouts/_nav.html
+++ b/templates/layouts/_nav.html
@@ -25,6 +25,9 @@
           <a class="nav-link" href="{% url 'planning:show' %}"> Planning </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'planning:planning' %}"> Planning v2 </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'planning:pupitre' %}"> Pupitre </a>
         </li>
 
