--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -45,6 +45,7 @@ background: #eee;
 }
 .list-group{
   width: 100%;
+  height: 100%;
 }
 
   /* hr pour ne pas avoir d'espace en haut dans le live */
@@ -182,4 +183,69 @@ background: #eee;
 .text_room_planning {
 	width: 100%;
 	justify-content: center;
-  }
+}
+
+.session {
+  padding: 1rem;
+  background: bisque;
+  border-radius: 1em;
+  margin: 0px 5px 5px 5px;
+}
+
+
+.current-session {
+    background-color: green;
+}
+
+.barre-horizontale {
+	display: flex;
+	height: 30px;
+	width: 100%;
+	background-color: lightgray;
+	padding: 5px;
+	margin-left: 5%;
+}
+
+.heure {
+	width: 8.333333333%;
+	text-align: center;
+}
+
+.salle-col {
+	margin-top: 3%;
+	width: 100%;
+	height: 100%;
+}
+.salle {
+	border-top: 1px solid #c4c4c4;
+	border-bottom: 1px solid #c4c4c4;
+	width: 100%;
+	height: 11%;
+	display: flex;
+	align-items: center;
+}
+
+.titre_salle {
+	width: 5%;
+}
+
+
+.session_horizontale {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+}
+
+.session_v2 {
+	/* padding-left: 0.5rem; */
+	background: rgb(241, 202, 154);
+	border-radius: 0.5em;
+	/* margin: 0px 1px 0 5px; */
+	/* width: 8.033333%; */
+	float: left;
+	display: flex;
+	align-items: center;
+	font-size: medium;
+	height: 95%;
+}
